--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "lucide-react": "^0.452.0"
   },
   "devDependencies": {
     "vite": "^5.4.8",
